# mini-spdlog

./: .gitignore  CMakeLists.txt  log.txt  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
include/mini_spdlog/: level.h  log_msg.h  logger.h  mini_spdlog.h  registry.h  source_loc.h
include/mini_spdlog/formatter/: formatter.h  pattern_formatter.h  simple_formatter.h
include/mini_spdlog/sink/: async_sink.h  async_thread_pool.h  daily_file_sink.h  file_sink.h  rotating_file_sink.h  sink.h  stdout_sink.h
src/: blackbox_stress_test.cpp  level.cpp  logger.cpp  main.cpp  registry.cpp
src/formatter/: pattern_formatter.cpp  simple_formatter.cpp
src/sink/: async_sink.cpp  async_thread_pool.cpp  daily_file_sink.cpp  file_sink.cpp  rotating_file_sink.cpp  stdout_sink.cpp
